--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: hackenv
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - anyio=4.7.0
@@ -10,10 +11,12 @@ dependencies:
   - attrs=24.3.0
   - babel=2.16.0
   - beautifulsoup4=4.13.4
+  - blas=1.0
   - bleach=6.2.0
   - brotlicffi=1.0.9.2
   - bzip2=1.0.8
-  - ca-certificates=2025.2.25
+  - c-ares=1.19.1
+  - ca-certificates=2025.7.14
   - certifi=2025.7.14
   - cffi=1.17.1
   - charset-normalizer=3.3.2
@@ -29,6 +32,7 @@ dependencies:
   - httpx=0.28.1
   - icu=73.1
   - idna=3.7
+  - intel-openmp=2023.1.0
   - ipykernel=6.29.5
   - ipython=9.1.0
   - ipython_pygments_lexers=1.1.1
@@ -52,14 +56,22 @@ dependencies:
   - jupyterlab_server=2.27.3
   - jupyterlab_widgets=3.0.15
   - krb5=1.21.3
+  - libabseil=20250127.0
   - libffi=3.4.4
+  - libgrpc=1.71.0
   - libpng=1.6.39
   - libpq=17.4
+  - libprotobuf=5.29.3
+  - libre2-11=2024.07.02
   - libsodium=1.0.18
   - lz4-c=1.9.4
   - markupsafe=3.0.2
   - matplotlib-inline=0.1.6
   - mistune=3.1.2
+  - mkl=2023.1.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.11
+  - mkl_random=1.2.8
   - nbclient=0.10.2
   - nbconvert=7.16.6
   - nbconvert-core=7.16.6
@@ -68,7 +80,9 @@ dependencies:
   - nest-asyncio=1.6.0
   - notebook=7.4.4
   - notebook-shim=0.2.4
-  - openssl=3.0.17
+  - numpy=2.0.1
+  - numpy-base=2.0.1
+  - openssl=3.5.1
   - overrides=7.4.0
   - packaging=24.2
   - pandoc=2.12
@@ -90,6 +104,7 @@ dependencies:
   - python-dateutil=2.9.0post0
   - python-fastjsonschema=2.20.0
   - python-json-logger=3.2.1
+  - python_abi=3.11
   - pywin32=308
   - pywinpty=2.0.15
   - pyyaml=6.0.2
@@ -102,6 +117,7 @@ dependencies:
   - qttools=6.7.3
   - qtwebchannel=6.7.3
   - qtwebsockets=6.7.3
+  - re2=2024.07.02
   - referencing=0.30.2
   - requests=2.32.4
   - rfc3339-validator=0.1.4
@@ -115,13 +131,12 @@ dependencies:
   - soupsieve=2.5
   - sqlite=3.50.2
   - stack_data=0.2.0
+  - tbb=2021.8.0
   - terminado=0.17.1
   - tinycss2=1.4.0
   - tk=8.6.14
   - tornado=6.5.1
   - traitlets=5.14.3
-  - typing-extensions=4.12.2
-  - typing_extensions=4.12.2
   - tzdata=2025b
   - ucrt=10.0.22621.0
   - urllib3=2.5.0
@@ -141,6 +156,9 @@ dependencies:
   - zlib=1.2.13
   - zstd=1.5.6
   - pip:
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.12.14
+      - aiosignal==1.4.0
       - annotated-types==0.7.0
       - backoff==2.2.1
       - bcrypt==4.3.0
@@ -149,12 +167,14 @@ dependencies:
       - chromadb==1.0.15
       - click==8.2.1
       - coloredlogs==15.0.1
+      - dataclasses-json==0.6.7
       - distro==1.9.0
       - durationpy==0.10
       - fastapi==0.116.1
       - filelock==3.18.0
       - filetype==1.2.0
       - flatbuffers==25.2.10
+      - frozenlist==1.7.0
       - fsspec==2025.7.0
       - google-ai-generativelanguage==0.6.15
       - google-api-core==2.25.1
@@ -168,6 +188,7 @@ dependencies:
       - grpcio-status==1.71.2
       - httplib2==0.22.0
       - httptools==0.6.4
+      - httpx-sse==0.4.1
       - huggingface-hub==0.34.0
       - humanfriendly==10.0
       - importlib-metadata==8.7.0
@@ -177,15 +198,19 @@ dependencies:
       - jsonpointer==3.0.0
       - kubernetes==33.1.0
       - langchain==0.3.27
+      - langchain-community==0.3.27
       - langchain-core==0.3.72
       - langchain-google-genai==2.0.10
+      - langchain-openai==0.3.28
       - langchain-text-splitters==0.3.9
       - langsmith==0.4.8
       - markdown-it-py==3.0.0
+      - marshmallow==3.26.1
       - mdurl==0.1.2
       - mmh3==5.1.0
       - mpmath==1.3.0
-      - numpy==2.3.2
+      - multidict==6.6.3
+      - mypy-extensions==1.1.0
       - oauthlib==3.3.1
       - onnxruntime==1.22.1
       - openai==1.97.1
@@ -197,6 +222,7 @@ dependencies:
       - opentelemetry-semantic-conventions==0.56b0
       - orjson==3.11.0
       - posthog==5.4.0
+      - propcache==0.3.2
       - proto-plus==1.26.1
       - protobuf==5.29.5
       - pyasn1==0.6.1
@@ -204,6 +230,7 @@ dependencies:
       - pybase64==1.4.1
       - pydantic==2.11.7
       - pydantic-core==2.33.2
+      - pydantic-settings==2.10.1
       - pyparsing==3.2.3
       - pypdf==5.8.0
       - pypika==0.48.9
@@ -224,11 +251,14 @@ dependencies:
       - tokenizers==0.21.2
       - tqdm==4.67.1
       - typer==0.16.0
+      - typing-extensions==4.14.1
+      - typing-inspect==0.9.0
       - typing-inspection==0.4.1
       - uritemplate==4.2.0
       - uvicorn==0.35.0
       - watchfiles==1.1.0
       - websockets==15.0.1
+      - yarl==1.20.1
       - zipp==3.23.0
       - zstandard==0.23.0
 prefix: C:\Users\Dell\anaconda3\envs\hackenv
