--- a/requirements.txt
+++ b/requirements.txt
@@ -1,207 +1,262 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.14
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.9.0
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/b/abs_f11axiliot/croot/argon2-cffi-bindings_1736182463870/work
-asttokens @ file:///C:/b/abs_9662ywy9fp/croot/asttokens_1743630464377/work
-async-lru @ file:///C:/b/abs_e0hjkvwwb5/croot/async-lru_1699554572212/work
-attrs @ file:///C:/b/abs_89hmquz5ga/croot/attrs_1734533130810/work
-babel @ file:///C:/b/abs_ffzt1bmjth/croot/babel_1737454394148/work
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4 @ file:///C:/b/abs_3fjnplvbrh/croot/beautifulsoup4-split_1752599001105/work
-bleach @ file:///C:/b/abs_925i9psm3u/croot/bleach_1732292896852/work
-brotlicffi @ file:///C:/b/abs_f4lixvzmxt/croot/brotlicffi_1736183286104/work
-build==1.2.2.post1
-cachetools==5.5.2
-certifi @ file:///C:/b/abs_67mh6i36ci/croot/certifi_1752653721535/work/certifi
-cffi @ file:///C:/b/abs_29_b57if3f/croot/cffi_1736184144340/work
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-chromadb==1.0.15
-click==8.2.1
-colorama @ file:///C:/ci_311/colorama_1676422310965/work
-coloredlogs==15.0.1
-comm @ file:///C:/b/abs_67a8058udb/croot/comm_1709322909844/work
-dataclasses-json==0.6.7
-debugpy @ file:///C:/b/abs_bf9oo2vhxp/croot/debugpy_1736269476451/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-distro==1.9.0
-durationpy==0.10
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastapi==0.116.1
-fastjsonschema @ file:///C:/b/abs_4ev90296ly/croot/python-fastjsonschema_1731939386416/work
-filelock==3.18.0
-filetype==1.2.0
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.7.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
-google-api-python-client==2.177.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-genai==1.27.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.74.0
-grpcio-status==1.71.2
-h11 @ file:///C:/b/abs_224rqu7kel/croot/h11_1748442031959/work
-httpcore @ file:///C:/b/abs_25m7_xthp6/croot/httpcore_1748526065845/work
-httplib2==0.22.0
-httptools==0.6.4
-httpx @ file:///C:/b/abs_9fclaf1b46/croot/httpx_1746747856672/work
-httpx-sse==0.4.1
-huggingface-hub==0.34.0
-humanfriendly==10.0
-idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-ipykernel @ file:///C:/b/abs_6c9ggygp01/croot/ipykernel_1737660720620/work
-ipython @ file:///C:/b/abs_307wfft5yu/croot/ipython_1744912982439/work
-ipython_pygments_lexers @ file:///C:/b/abs_b66hj1lo19/croot/ipython_pygments_lexers_1744753262043/work
-ipywidgets @ file:///C:/b/abs_f03en2fv37/croot/ipywidgets_1733504604628/work
-jedi @ file:///C:/b/abs_3a2kbnlclc/croot/jedi_1733987412687/work
-Jinja2 @ file:///C:/b/abs_920kup4e6u/croot/jinja2_1741711580669/work
-jiter==0.10.0
-json5 @ file:///C:/b/abs_743lprxrv5/croot/json5_1730786818336/work
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema @ file:///C:/b/abs_4d8dstds3t/croot/jsonschema_1753206424024/work
-jsonschema-specifications @ file:///C:/b/abs_0brvm6vryw/croot/jsonschema-specifications_1699032417323/work
-jupyter @ file:///C:/b/abs_32aohix0i1/croot/jupyter_1737645821205/work
-jupyter-console @ file:///C:/b/abs_82xaa6i2y4/croot/jupyter_console_1680000189372/work
-jupyter-events @ file:///C:/b/abs_9cm3qlticu/croot/jupyter_events_1741184612840/work
-jupyter-lsp @ file:///C:/b/abs_7171flzdkg/croot/jupyter-lsp-meta_1745827033118/work
-jupyter_client @ file:///C:/b/abs_149bw133if/croot/jupyter_client_1737570986926/work
-jupyter_core @ file:///C:/b/abs_7c6fipznw3/croot/jupyter_core_1751991383524/work
-jupyter_server @ file:///C:/b/abs_cdpu8und98/croot/jupyter_server_1751996637146/work
-jupyter_server_terminals @ file:///C:/b/abs_adjrm9dtns/croot/jupyter_server_terminals_1744706714294/work
-jupyterlab @ file:///C:/b/abs_79ucqim8vh/croot/jupyterlab_1752046383161/work
-jupyterlab_pygments @ file:///C:/b/abs_d5alfet8m6/croot/jupyterlab_pygments_1741124274578/work
-jupyterlab_server @ file:///C:/b/abs_fdi5r_tpjc/croot/jupyterlab_server_1725865372811/work
-jupyterlab_widgets @ file:///C:/b/abs_6566by8dag/croot/jupyterlab_widgets_1752066574111/work
-kubernetes==33.1.0
-langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.72
-langchain-google-genai==2.0.10
-langchain-openai==0.3.28
-langchain-text-splitters==0.3.9
-langsmith==0.4.8
-markdown-it-py==3.0.0
-MarkupSafe @ file:///C:/b/abs_a0ma7ge0jc/croot/markupsafe_1738584052792/work
-marshmallow==3.26.1
-matplotlib-inline @ file:///C:/ci_311/matplotlib-inline_1676425798036/work
-mdurl==0.1.2
-mistune @ file:///C:/b/abs_77yql3poyz/croot/mistune_1741124004410/work
-mkl-service==2.4.0
-mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
-mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
-mmh3==5.1.0
-mpmath==1.3.0
-multidict==6.6.3
-mypy_extensions==1.1.0
-nbclient @ file:///C:/b/abs_a09c4t3h8x/croot/nbclient_1741124030330/work
-nbconvert @ file:///C:/b/abs_c27_60dzt8/croot/nbconvert-meta_1741191385337/work
-nbformat @ file:///C:/b/abs_c2jkw46etm/croot/nbformat_1728050303821/work
-nest-asyncio @ file:///C:/b/abs_65d6lblmoi/croot/nest-asyncio_1708532721305/work
-notebook @ file:///C:/b/abs_2etl6y89ui/croot/notebook_1752060897959/work
-notebook_shim @ file:///C:/b/abs_9ctyfgpncn/croot/notebook-shim_1741707829491/work
-numpy @ file:///C:/b/abs_0123vcxhf8/croot/numpy_and_numpy_base_1725470331966/work/dist/numpy-2.0.1-cp311-cp311-win_amd64.whl#sha256=46eb5850478cda64bda6d2f2d3d6ad8ceeb7cc168b83532e4f9dbbcb42e22ab2
-oauthlib==3.3.1
-onnxruntime==1.22.1
-openai==1.97.1
-opentelemetry-api==1.35.0
-opentelemetry-exporter-otlp-proto-common==1.35.0
-opentelemetry-exporter-otlp-proto-grpc==1.35.0
-opentelemetry-proto==1.35.0
-opentelemetry-sdk==1.35.0
-opentelemetry-semantic-conventions==0.56b0
-orjson==3.11.0
-overrides @ file:///C:/b/abs_cfh89c8yf4/croot/overrides_1699371165349/work
-packaging @ file:///C:/b/abs_3by6s2fa66/croot/packaging_1734472138782/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///C:/b/abs_834b4mj92b/croot/parso_1733963322289/work
-platformdirs @ file:///C:/b/abs_ddh15014or/croot/platformdirs_1744273060660/work
-posthog==5.4.0
-prometheus_client @ file:///C:/b/abs_8b175q_ub8/croot/prometheus_client_1744271638821/work
-prompt-toolkit @ file:///C:/b/abs_68uwr58ed1/croot/prompt-toolkit_1704404394082/work
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==5.26.1
-psutil @ file:///C:/b/abs_b5gv3mn55h/croot/psutil_1736371546320/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybase64==1.4.1
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-Pygments @ file:///C:/b/abs_e4bg5vh5j_/croot/pygments_1744667628203/work
-pyparsing==3.2.3
-pypdf==5.8.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-PyQt6==6.7.1
-PyQt6_sip @ file:///C:/b/abs_25j3xlesmj/croot/pyqt-split_1753427295085/work/pyqt_sip
-pyreadline3==3.5.4
-PySocks @ file:///C:/ci_311/pysocks_1676425991111/work
-python-dateutil @ file:///C:/b/abs_3au_koqnbs/croot/python-dateutil_1716495777160/work
-python-dotenv==1.1.1
-python-json-logger @ file:///C:/b/abs_0cm_mnox0z/croot/python-json-logger_1734370042436/work
-pywin32==308
-pywinpty @ file:///C:/b/abs_883wh7sts8/croot/pywinpty_1741871674963/work
-PyYAML @ file:///C:/b/abs_14xkfs39bx/croot/pyyaml_1728657968772/work
-pyzmq @ file:///C:/b/abs_f3yte6j5yn/croot/pyzmq_1734711069724/work
-qtconsole @ file:///C:/b/abs_077eiqc5gw/croot/qtconsole_1744633984381/work
-QtPy @ file:///C:/b/abs_derqu__3p8/croot/qtpy_1700144907661/work
-referencing @ file:///C:/b/abs_09f4hj6adf/croot/referencing_1699012097448/work
-regex==2024.11.6
-requests @ file:///C:/b/abs_0b3h9d_724/croot/requests_1750426345668/work
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator @ file:///C:/b/abs_ddfmseb_vm/croot/rfc3339-validator_1683077054906/work
-rfc3986-validator @ file:///C:/b/abs_6e9azihr8o/croot/rfc3986-validator_1683059049737/work
-rich==14.1.0
-rpds-py @ file:///C:/b/abs_0c6z5kcdb6/croot/rpds-py_1736545465023/work
-rsa==4.9.1
-Send2Trash @ file:///C:/b/abs_7e73ol18dl/croot/send2trash_1736542724140/work
-shellingham==1.5.4
-sip @ file:///C:/b/abs_5cto136kse/croot/sip_1738856220313/work
-six @ file:///C:/b/abs_149wuyuo1o/croot/six_1744271521515/work
-sniffio @ file:///C:/b/abs_3akdewudo_/croot/sniffio_1705431337396/work
-soupsieve @ file:///C:/b/abs_bbsvy9t4pl/croot/soupsieve_1696347611357/work
-SQLAlchemy==2.0.41
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-starlette==0.47.2
-sympy==1.14.0
-tenacity==8.5.0
-terminado @ file:///C:/ci_311/terminado_1678228513830/work
-tiktoken==0.9.0
-tinycss2 @ file:///C:/b/abs_df38owi5ma/croot/tinycss2_1738337725183/work
-tokenizers==0.21.2
-tornado @ file:///C:/b/abs_7dzpc171lf/croot/tornado_1748956950306/work
-tqdm==4.67.1
-traitlets @ file:///C:/b/abs_bfsnoxl4pq/croot/traitlets_1718227069245/work
-typer==0.16.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-uritemplate==4.2.0
-urllib3 @ file:///C:/b/abs_393g1ayee_/croot/urllib3_1750775481226/work
-uvicorn==0.35.0
-watchfiles==1.1.0
-wcwidth @ file:///C:/b/abs_0c8p4c33bp/croot/wcwidth_1750352902378/work
-webencodings==0.5.1
-websocket-client @ file:///C:/b/abs_5dmnxxoci9/croot/websocket-client_1715878351319/work
-websockets==15.0.1
-widgetsnbextension @ file:///C:/b/abs_df0o5rkt3b/croot/widgetsnbextension_1733439593530/work
-win-inet-pton @ file:///C:/ci_311/win_inet_pton_1676425458225/work
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.23.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+# created-by: conda 25.5.1
+aiohappyeyeballs=2.6.1=pypi_0
+aiohttp=3.12.14=pypi_0
+aiosignal=1.4.0=pypi_0
+annotated-types=0.7.0=pypi_0
+anyio=4.9.0=pypi_0
+argon2-cffi=21.3.0=pyhd3eb1b0_0
+argon2-cffi-bindings=21.2.0=py311h827c3e9_1
+asttokens=3.0.0=py311haa95532_0
+async-lru=2.0.4=py311haa95532_0
+attrs=24.3.0=py311haa95532_0
+babel=2.16.0=py311haa95532_0
+backoff=2.2.1=pypi_0
+bcrypt=4.3.0=pypi_0
+beautifulsoup4=4.13.4=py311haa95532_0
+blas=1.0=mkl
+bleach=6.2.0=py311haa95532_0
+brotlicffi=1.0.9.2=py311h5da7b33_1
+build=1.2.2.post1=pypi_0
+bzip2=1.0.8=h2bbff1b_6
+c-ares=1.19.1=h2bbff1b_0
+ca-certificates=2025.7.14=h4c7d964_0
+cachetools=5.5.2=pypi_0
+certifi=2025.7.14=py311haa95532_0
+cffi=1.17.1=py311h827c3e9_1
+charset-normalizer=3.3.2=pyhd3eb1b0_0
+chromadb=1.0.15=pypi_0
+click=8.2.1=pypi_0
+colorama=0.4.6=py311haa95532_0
+coloredlogs=15.0.1=pypi_0
+comm=0.2.1=py311haa95532_0
+dataclasses-json=0.6.7=pypi_0
+debugpy=1.8.11=py311h5da7b33_0
+decorator=5.1.1=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
+distro=1.9.0=pypi_0
+durationpy=0.10=pypi_0
+executing=0.8.3=pyhd3eb1b0_0
+expat=2.7.1=h8ddb27b_0
+fastapi=0.116.1=pypi_0
+filelock=3.18.0=pypi_0
+filetype=1.2.0=pypi_0
+flatbuffers=25.2.10=pypi_0
+frozenlist=1.7.0=pypi_0
+fsspec=2025.7.0=pypi_0
+google-ai-generativelanguage=0.6.15=pypi_0
+google-api-core=2.25.1=pypi_0
+google-api-python-client=2.177.0=pypi_0
+google-auth=2.40.3=pypi_0
+google-auth-httplib2=0.2.0=pypi_0
+google-genai=1.27.0=pypi_0
+google-generativeai=0.8.5=pypi_0
+googleapis-common-protos=1.70.0=pypi_0
+greenlet=3.2.3=pypi_0
+grpcio=1.74.0=pypi_0
+grpcio-status=1.71.2=pypi_0
+h11=0.16.0=py311haa95532_0
+httpcore=1.0.9=py311haa95532_0
+httplib2=0.22.0=pypi_0
+httptools=0.6.4=pypi_0
+httpx=0.28.1=py311haa95532_0
+httpx-sse=0.4.1=pypi_0
+huggingface-hub=0.34.0=pypi_0
+humanfriendly=10.0=pypi_0
+icu=73.1=h6c2663c_0
+idna=3.7=py311haa95532_0
+importlib-metadata=8.7.0=pypi_0
+importlib-resources=6.5.2=pypi_0
+intel-openmp=2023.1.0=h59b6b97_46320
+ipykernel=6.29.5=py311haa95532_1
+ipython=9.1.0=py311haa95532_0
+ipython_pygments_lexers=1.1.1=py311haa95532_0
+ipywidgets=8.1.5=py311haa95532_0
+jedi=0.19.2=py311haa95532_0
+jinja2=3.1.6=py311haa95532_0
+jiter=0.10.0=pypi_0
+jpeg=9e=h827c3e9_3
+json5=0.9.25=py311haa95532_0
+jsonpatch=1.33=pypi_0
+jsonpointer=3.0.0=pypi_0
+jsonschema=4.25.0=py311haa95532_0
+jsonschema-specifications=2023.7.1=py311haa95532_0
+jupyter=1.1.1=py311haa95532_0
+jupyter-lsp=2.2.5=py311haa95532_0
+jupyter_client=8.6.3=py311haa95532_0
+jupyter_console=6.6.3=py311haa95532_0
+jupyter_core=5.8.1=py311haa95532_0
+jupyter_events=0.12.0=py311haa95532_0
+jupyter_server=2.16.0=py311haa95532_0
+jupyter_server_terminals=0.5.3=py311haa95532_0
+jupyterlab=4.4.4=py311haa95532_0
+jupyterlab_pygments=0.3.0=py311haa95532_0
+jupyterlab_server=2.27.3=py311haa95532_0
+jupyterlab_widgets=3.0.15=py311haa95532_0
+krb5=1.21.3=he4457a5_1
+kubernetes=33.1.0=pypi_0
+langchain=0.3.27=pypi_0
+langchain-community=0.3.27=pypi_0
+langchain-core=0.3.72=pypi_0
+langchain-google-genai=2.0.10=pypi_0
+langchain-openai=0.3.28=pypi_0
+langchain-text-splitters=0.3.9=pypi_0
+langsmith=0.4.8=pypi_0
+libabseil=20250127.0=cxx17_h52369b4_0
+libffi=3.4.4=hd77b12b_1
+libgrpc=1.71.0=hf4237ab_0
+libpng=1.6.39=h8cc25b3_0
+libpq=17.4=h4a159e6_1
+libprotobuf=5.29.3=h65a231f_1
+libre2-11=2024.07.02=h5da7b33_0
+libsodium=1.0.18=h62dcd97_0
+lz4-c=1.9.4=h2bbff1b_1
+markdown-it-py=3.0.0=pypi_0
+markupsafe=3.0.2=py311h827c3e9_0
+marshmallow=3.26.1=pypi_0
+matplotlib-inline=0.1.6=py311haa95532_0
+mdurl=0.1.2=pypi_0
+mistune=3.1.2=py311haa95532_0
+mkl=2023.1.0=h6b88ed4_46358
+mkl-service=2.4.0=py311h827c3e9_2
+mkl_fft=1.3.11=py311h827c3e9_0
+mkl_random=1.2.8=py311hea22821_0
+mmh3=5.1.0=pypi_0
+mpmath=1.3.0=pypi_0
+multidict=6.6.3=pypi_0
+mypy-extensions=1.1.0=pypi_0
+nbclient=0.10.2=py311haa95532_0
+nbconvert=7.16.6=py311haa95532_0
+nbconvert-core=7.16.6=py311haa95532_0
+nbconvert-pandoc=7.16.6=py311haa95532_0
+nbformat=5.10.4=py311haa95532_0
+nest-asyncio=1.6.0=py311haa95532_0
+notebook=7.4.4=py311haa95532_0
+notebook-shim=0.2.4=py311haa95532_0
+numpy=2.0.1=py311hdab7c0b_1
+numpy-base=2.0.1=py311hd01c5d8_1
+oauthlib=3.3.1=pypi_0
+onnxruntime=1.22.1=pypi_0
+openai=1.97.1=pypi_0
+openssl=3.5.1=h725018a_0
+opentelemetry-api=1.35.0=pypi_0
+opentelemetry-exporter-otlp-proto-common=1.35.0=pypi_0
+opentelemetry-exporter-otlp-proto-grpc=1.35.0=pypi_0
+opentelemetry-proto=1.35.0=pypi_0
+opentelemetry-sdk=1.35.0=pypi_0
+opentelemetry-semantic-conventions=0.56b0=pypi_0
+orjson=3.11.0=pypi_0
+overrides=7.4.0=py311haa95532_0
+packaging=24.2=py311haa95532_0
+pandoc=2.12=haa95532_3
+pandocfilters=1.5.0=pyhd3eb1b0_0
+parso=0.8.4=py311haa95532_0
+pip=25.1=pyhc872135_2
+platformdirs=4.3.7=py311haa95532_0
+posthog=5.4.0=pypi_0
+prometheus_client=0.21.1=py311haa95532_0
+prompt-toolkit=3.0.43=py311haa95532_0
+prompt_toolkit=3.0.43=hd3eb1b0_0
+propcache=0.3.2=pypi_0
+proto-plus=1.26.1=pypi_0
+protobuf=5.26.1=pypi_0
+psutil=5.9.0=py311h827c3e9_1
+pure_eval=0.2.2=pyhd3eb1b0_0
+pyasn1=0.6.1=pypi_0
+pyasn1-modules=0.4.2=pypi_0
+pybase64=1.4.1=pypi_0
+pycparser=2.21=pyhd3eb1b0_0
+pydantic=2.11.7=pypi_0
+pydantic-core=2.33.2=pypi_0
+pydantic-settings=2.10.1=pypi_0
+pygments=2.19.1=py311haa95532_0
+pyparsing=3.2.3=pypi_0
+pypdf=5.8.0=pypi_0
+pypika=0.48.9=pypi_0
+pyproject-hooks=1.2.0=pypi_0
+pyqt=6.7.1=py311h378bd72_2
+pyqt6-sip=13.9.1=py311h02ab6af_2
+pyreadline3=3.5.4=pypi_0
+pysocks=1.7.1=py311haa95532_0
+python=3.11.13=h981015d_0
+python-dateutil=2.9.0post0=py311haa95532_2
+python-dotenv=1.1.1=pypi_0
+python-fastjsonschema=2.20.0=py311haa95532_0
+python-json-logger=3.2.1=py311haa95532_0
+python_abi=3.11=2_cp311
+pywin32=308=py311h5da7b33_0
+pywinpty=2.0.15=py311h72d21ff_0
+pyyaml=6.0.2=py311h827c3e9_0
+pyzmq=26.2.0=py311h5da7b33_0
+qtbase=6.7.3=hd088775_3
+qtconsole=5.6.1=py311haa95532_1
+qtdeclarative=6.7.3=h885b0b7_1
+qtpy=2.4.1=py311haa95532_0
+qtsvg=6.7.3=h9d4b640_1
+qttools=6.7.3=hcb596f7_1
+qtwebchannel=6.7.3=h885b0b7_1
+qtwebsockets=6.7.3=h885b0b7_1
+re2=2024.07.02=h214f63a_0
+referencing=0.30.2=py311haa95532_0
+regex=2024.11.6=pypi_0
+requests=2.32.4=py311haa95532_0
+requests-oauthlib=2.0.0=pypi_0
+requests-toolbelt=1.0.0=pypi_0
+rfc3339-validator=0.1.4=py311haa95532_0
+rfc3986-validator=0.1.1=py311haa95532_0
+rich=14.1.0=pypi_0
+rpds-py=0.22.3=py311h636fa0f_0
+rsa=4.9.1=pypi_0
+send2trash=1.8.2=py311haa95532_1
+setuptools=78.1.1=py311haa95532_0
+shellingham=1.5.4=pypi_0
+sip=6.10.0=py311h5da7b33_0
+six=1.17.0=py311haa95532_0
+sniffio=1.3.0=py311haa95532_0
+soupsieve=2.5=py311haa95532_0
+sqlalchemy=2.0.41=pypi_0
+sqlite=3.50.2=hda9a48d_1
+stack_data=0.2.0=pyhd3eb1b0_0
+starlette=0.47.2=pypi_0
+sympy=1.14.0=pypi_0
+tbb=2021.8.0=h59b6b97_0
+tenacity=8.5.0=pypi_0
+terminado=0.17.1=py311haa95532_0
+tiktoken=0.9.0=pypi_0
+tinycss2=1.4.0=py311haa95532_0
+tk=8.6.14=h5e9d12e_1
+tokenizers=0.21.2=pypi_0
+tornado=6.5.1=py311h827c3e9_0
+tqdm=4.67.1=pypi_0
+traitlets=5.14.3=py311haa95532_0
+typer=0.16.0=pypi_0
+typing-extensions=4.14.1=pypi_0
+typing-inspect=0.9.0=pypi_0
+typing-inspection=0.4.1=pypi_0
+tzdata=2025b=h04d1e81_0
+ucrt=10.0.22621.0=haa95532_0
+uritemplate=4.2.0=pypi_0
+urllib3=2.5.0=py311haa95532_0
+uvicorn=0.35.0=pypi_0
+vc=14.3=h2df5915_10
+vc14_runtime=14.44.35208=h4927774_10
+vs2015_runtime=14.44.35208=ha6b5a95_10
+watchfiles=1.1.0=pypi_0
+wcwidth=0.2.13=py311haa95532_0
+webencodings=0.5.1=py311haa95532_1
+websocket-client=1.8.0=py311haa95532_0
+websockets=15.0.1=pypi_0
+wheel=0.45.1=py311haa95532_0
+widgetsnbextension=4.0.13=py311haa95532_0
+win_inet_pton=1.1.0=py311haa95532_0
+winpty=0.4.3=4
+xz=5.6.4=h4754444_1
+yaml=0.2.5=he774522_0
+yarl=1.20.1=pypi_0
+zeromq=4.3.5=hd77b12b_0
+zipp=3.23.0=pypi_0
+zlib=1.2.13=h8cc25b3_1
+zstandard=0.23.0=pypi_0
+zstd=1.5.6=h8880b57_0
