--- a/requirements.txt
+++ b/requirements.txt
@@ -2,261 +2,261 @@
 # $ conda create --name <env> --file <this file>
 # platform: win-64
 # created-by: conda 25.5.1
-aiohappyeyeballs=2.6.1=pypi_0
-aiohttp=3.12.14=pypi_0
-aiosignal=1.4.0=pypi_0
-annotated-types=0.7.0=pypi_0
-anyio=4.9.0=pypi_0
-argon2-cffi=21.3.0=pyhd3eb1b0_0
-argon2-cffi-bindings=21.2.0=py311h827c3e9_1
-asttokens=3.0.0=py311haa95532_0
-async-lru=2.0.4=py311haa95532_0
-attrs=24.3.0=py311haa95532_0
-babel=2.16.0=py311haa95532_0
-backoff=2.2.1=pypi_0
-bcrypt=4.3.0=pypi_0
-beautifulsoup4=4.13.4=py311haa95532_0
-blas=1.0=mkl
-bleach=6.2.0=py311haa95532_0
-brotlicffi=1.0.9.2=py311h5da7b33_1
-build=1.2.2.post1=pypi_0
-bzip2=1.0.8=h2bbff1b_6
-c-ares=1.19.1=h2bbff1b_0
-ca-certificates=2025.7.14=h4c7d964_0
-cachetools=5.5.2=pypi_0
-certifi=2025.7.14=py311haa95532_0
-cffi=1.17.1=py311h827c3e9_1
-charset-normalizer=3.3.2=pyhd3eb1b0_0
-chromadb=1.0.15=pypi_0
-click=8.2.1=pypi_0
-colorama=0.4.6=py311haa95532_0
-coloredlogs=15.0.1=pypi_0
-comm=0.2.1=py311haa95532_0
-dataclasses-json=0.6.7=pypi_0
-debugpy=1.8.11=py311h5da7b33_0
-decorator=5.1.1=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-distro=1.9.0=pypi_0
-durationpy=0.10=pypi_0
-executing=0.8.3=pyhd3eb1b0_0
-expat=2.7.1=h8ddb27b_0
-fastapi=0.116.1=pypi_0
-filelock=3.18.0=pypi_0
-filetype=1.2.0=pypi_0
-flatbuffers=25.2.10=pypi_0
-frozenlist=1.7.0=pypi_0
-fsspec=2025.7.0=pypi_0
-google-ai-generativelanguage=0.6.15=pypi_0
-google-api-core=2.25.1=pypi_0
-google-api-python-client=2.177.0=pypi_0
-google-auth=2.40.3=pypi_0
-google-auth-httplib2=0.2.0=pypi_0
-google-genai=1.27.0=pypi_0
-google-generativeai=0.8.5=pypi_0
-googleapis-common-protos=1.70.0=pypi_0
-greenlet=3.2.3=pypi_0
-grpcio=1.74.0=pypi_0
-grpcio-status=1.71.2=pypi_0
-h11=0.16.0=py311haa95532_0
-httpcore=1.0.9=py311haa95532_0
-httplib2=0.22.0=pypi_0
-httptools=0.6.4=pypi_0
-httpx=0.28.1=py311haa95532_0
-httpx-sse=0.4.1=pypi_0
-huggingface-hub=0.34.0=pypi_0
-humanfriendly=10.0=pypi_0
-icu=73.1=h6c2663c_0
-idna=3.7=py311haa95532_0
-importlib-metadata=8.7.0=pypi_0
-importlib-resources=6.5.2=pypi_0
-intel-openmp=2023.1.0=h59b6b97_46320
-ipykernel=6.29.5=py311haa95532_1
-ipython=9.1.0=py311haa95532_0
-ipython_pygments_lexers=1.1.1=py311haa95532_0
-ipywidgets=8.1.5=py311haa95532_0
-jedi=0.19.2=py311haa95532_0
-jinja2=3.1.6=py311haa95532_0
-jiter=0.10.0=pypi_0
-jpeg=9e=h827c3e9_3
-json5=0.9.25=py311haa95532_0
-jsonpatch=1.33=pypi_0
-jsonpointer=3.0.0=pypi_0
-jsonschema=4.25.0=py311haa95532_0
-jsonschema-specifications=2023.7.1=py311haa95532_0
-jupyter=1.1.1=py311haa95532_0
-jupyter-lsp=2.2.5=py311haa95532_0
-jupyter_client=8.6.3=py311haa95532_0
-jupyter_console=6.6.3=py311haa95532_0
-jupyter_core=5.8.1=py311haa95532_0
-jupyter_events=0.12.0=py311haa95532_0
-jupyter_server=2.16.0=py311haa95532_0
-jupyter_server_terminals=0.5.3=py311haa95532_0
-jupyterlab=4.4.4=py311haa95532_0
-jupyterlab_pygments=0.3.0=py311haa95532_0
-jupyterlab_server=2.27.3=py311haa95532_0
-jupyterlab_widgets=3.0.15=py311haa95532_0
-krb5=1.21.3=he4457a5_1
-kubernetes=33.1.0=pypi_0
-langchain=0.3.27=pypi_0
-langchain-community=0.3.27=pypi_0
-langchain-core=0.3.72=pypi_0
-langchain-google-genai=2.0.10=pypi_0
-langchain-openai=0.3.28=pypi_0
-langchain-text-splitters=0.3.9=pypi_0
-langsmith=0.4.8=pypi_0
-libabseil=20250127.0=cxx17_h52369b4_0
-libffi=3.4.4=hd77b12b_1
-libgrpc=1.71.0=hf4237ab_0
-libpng=1.6.39=h8cc25b3_0
-libpq=17.4=h4a159e6_1
-libprotobuf=5.29.3=h65a231f_1
-libre2-11=2024.07.02=h5da7b33_0
-libsodium=1.0.18=h62dcd97_0
-lz4-c=1.9.4=h2bbff1b_1
-markdown-it-py=3.0.0=pypi_0
-markupsafe=3.0.2=py311h827c3e9_0
-marshmallow=3.26.1=pypi_0
-matplotlib-inline=0.1.6=py311haa95532_0
-mdurl=0.1.2=pypi_0
-mistune=3.1.2=py311haa95532_0
-mkl=2023.1.0=h6b88ed4_46358
-mkl-service=2.4.0=py311h827c3e9_2
-mkl_fft=1.3.11=py311h827c3e9_0
-mkl_random=1.2.8=py311hea22821_0
-mmh3=5.1.0=pypi_0
-mpmath=1.3.0=pypi_0
-multidict=6.6.3=pypi_0
-mypy-extensions=1.1.0=pypi_0
-nbclient=0.10.2=py311haa95532_0
-nbconvert=7.16.6=py311haa95532_0
-nbconvert-core=7.16.6=py311haa95532_0
-nbconvert-pandoc=7.16.6=py311haa95532_0
-nbformat=5.10.4=py311haa95532_0
-nest-asyncio=1.6.0=py311haa95532_0
-notebook=7.4.4=py311haa95532_0
-notebook-shim=0.2.4=py311haa95532_0
-numpy=2.0.1=py311hdab7c0b_1
-numpy-base=2.0.1=py311hd01c5d8_1
-oauthlib=3.3.1=pypi_0
-onnxruntime=1.22.1=pypi_0
-openai=1.97.1=pypi_0
-openssl=3.5.1=h725018a_0
-opentelemetry-api=1.35.0=pypi_0
-opentelemetry-exporter-otlp-proto-common=1.35.0=pypi_0
-opentelemetry-exporter-otlp-proto-grpc=1.35.0=pypi_0
-opentelemetry-proto=1.35.0=pypi_0
-opentelemetry-sdk=1.35.0=pypi_0
-opentelemetry-semantic-conventions=0.56b0=pypi_0
-orjson=3.11.0=pypi_0
-overrides=7.4.0=py311haa95532_0
-packaging=24.2=py311haa95532_0
-pandoc=2.12=haa95532_3
-pandocfilters=1.5.0=pyhd3eb1b0_0
-parso=0.8.4=py311haa95532_0
-pip=25.1=pyhc872135_2
-platformdirs=4.3.7=py311haa95532_0
-posthog=5.4.0=pypi_0
-prometheus_client=0.21.1=py311haa95532_0
-prompt-toolkit=3.0.43=py311haa95532_0
-prompt_toolkit=3.0.43=hd3eb1b0_0
-propcache=0.3.2=pypi_0
-proto-plus=1.26.1=pypi_0
-protobuf=5.26.1=pypi_0
-psutil=5.9.0=py311h827c3e9_1
-pure_eval=0.2.2=pyhd3eb1b0_0
-pyasn1=0.6.1=pypi_0
-pyasn1-modules=0.4.2=pypi_0
-pybase64=1.4.1=pypi_0
-pycparser=2.21=pyhd3eb1b0_0
-pydantic=2.11.7=pypi_0
-pydantic-core=2.33.2=pypi_0
-pydantic-settings=2.10.1=pypi_0
-pygments=2.19.1=py311haa95532_0
-pyparsing=3.2.3=pypi_0
-pypdf=5.8.0=pypi_0
-pypika=0.48.9=pypi_0
-pyproject-hooks=1.2.0=pypi_0
-pyqt=6.7.1=py311h378bd72_2
-pyqt6-sip=13.9.1=py311h02ab6af_2
-pyreadline3=3.5.4=pypi_0
-pysocks=1.7.1=py311haa95532_0
-python=3.11.13=h981015d_0
-python-dateutil=2.9.0post0=py311haa95532_2
-python-dotenv=1.1.1=pypi_0
-python-fastjsonschema=2.20.0=py311haa95532_0
-python-json-logger=3.2.1=py311haa95532_0
-python_abi=3.11=2_cp311
-pywin32=308=py311h5da7b33_0
-pywinpty=2.0.15=py311h72d21ff_0
-pyyaml=6.0.2=py311h827c3e9_0
-pyzmq=26.2.0=py311h5da7b33_0
-qtbase=6.7.3=hd088775_3
-qtconsole=5.6.1=py311haa95532_1
-qtdeclarative=6.7.3=h885b0b7_1
-qtpy=2.4.1=py311haa95532_0
-qtsvg=6.7.3=h9d4b640_1
-qttools=6.7.3=hcb596f7_1
-qtwebchannel=6.7.3=h885b0b7_1
-qtwebsockets=6.7.3=h885b0b7_1
-re2=2024.07.02=h214f63a_0
-referencing=0.30.2=py311haa95532_0
-regex=2024.11.6=pypi_0
-requests=2.32.4=py311haa95532_0
-requests-oauthlib=2.0.0=pypi_0
-requests-toolbelt=1.0.0=pypi_0
-rfc3339-validator=0.1.4=py311haa95532_0
-rfc3986-validator=0.1.1=py311haa95532_0
-rich=14.1.0=pypi_0
-rpds-py=0.22.3=py311h636fa0f_0
-rsa=4.9.1=pypi_0
-send2trash=1.8.2=py311haa95532_1
-setuptools=78.1.1=py311haa95532_0
-shellingham=1.5.4=pypi_0
-sip=6.10.0=py311h5da7b33_0
-six=1.17.0=py311haa95532_0
-sniffio=1.3.0=py311haa95532_0
-soupsieve=2.5=py311haa95532_0
-sqlalchemy=2.0.41=pypi_0
-sqlite=3.50.2=hda9a48d_1
-stack_data=0.2.0=pyhd3eb1b0_0
-starlette=0.47.2=pypi_0
-sympy=1.14.0=pypi_0
-tbb=2021.8.0=h59b6b97_0
-tenacity=8.5.0=pypi_0
-terminado=0.17.1=py311haa95532_0
-tiktoken=0.9.0=pypi_0
-tinycss2=1.4.0=py311haa95532_0
-tk=8.6.14=h5e9d12e_1
-tokenizers=0.21.2=pypi_0
-tornado=6.5.1=py311h827c3e9_0
-tqdm=4.67.1=pypi_0
-traitlets=5.14.3=py311haa95532_0
-typer=0.16.0=pypi_0
-typing-extensions=4.14.1=pypi_0
-typing-inspect=0.9.0=pypi_0
-typing-inspection=0.4.1=pypi_0
-tzdata=2025b=h04d1e81_0
-ucrt=10.0.22621.0=haa95532_0
-uritemplate=4.2.0=pypi_0
-urllib3=2.5.0=py311haa95532_0
-uvicorn=0.35.0=pypi_0
-vc=14.3=h2df5915_10
-vc14_runtime=14.44.35208=h4927774_10
-vs2015_runtime=14.44.35208=ha6b5a95_10
-watchfiles=1.1.0=pypi_0
-wcwidth=0.2.13=py311haa95532_0
-webencodings=0.5.1=py311haa95532_1
-websocket-client=1.8.0=py311haa95532_0
-websockets=15.0.1=pypi_0
-wheel=0.45.1=py311haa95532_0
-widgetsnbextension=4.0.13=py311haa95532_0
-win_inet_pton=1.1.0=py311haa95532_0
-winpty=0.4.3=4
-xz=5.6.4=h4754444_1
-yaml=0.2.5=he774522_0
-yarl=1.20.1=pypi_0
-zeromq=4.3.5=hd77b12b_0
-zipp=3.23.0=pypi_0
-zlib=1.2.13=h8cc25b3_1
-zstandard=0.23.0=pypi_0
-zstd=1.5.6=h8880b57_0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==3.0.0
+async-lru==2.0.4
+attrs==24.3.0
+babel==2.16.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+blas==1.0
+bleach==6.2.0
+brotlicffi==1.0.9.2
+build==1.2.2.post1
+bzip2==1.0.8
+c-ares==1.19.1
+ca-certificates==2025.7.14
+cachetools==5.5.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.3.2
+chromadb==1.0.15
+click==8.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.1
+dataclasses-json==0.6.7
+debugpy==1.8.11
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.9.0
+durationpy==0.10
+executing==0.8.3
+expat==2.7.1
+fastapi==0.116.1
+filelock==3.18.0
+filetype==1.2.0
+flatbuffers==25.2.10
+frozenlist==1.7.0
+fsspec==2025.7.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.177.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-genai==1.27.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.74.0
+grpcio-status==1.71.2
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.34.0
+humanfriendly==10.0
+icu==73.1
+idna==3.7
+importlib-metadata==8.7.0
+importlib-resources==6.5.2
+intel-openmp==2023.1.0
+ipykernel==6.29.5
+ipython==9.1.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.5
+jedi==0.19.2
+jinja2==3.1.6
+jiter==0.10.0
+jpeg==9e
+json5==0.9.25
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2023.7.1
+jupyter==1.1.1
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_console==6.6.3
+jupyter_core==5.8.1
+jupyter_events==0.12.0
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.4
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.15
+krb5==1.21.3
+kubernetes==33.1.0
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.72
+langchain-google-genai==2.0.10
+langchain-openai==0.3.28
+langchain-text-splitters==0.3.9
+langsmith==0.4.8
+libabseil==20250127.0
+libffi==3.4.4
+libgrpc==1.71.0
+libpng==1.6.39
+libpq==17.4
+libprotobuf==5.29.3
+libre2-11==2024.07.02
+libsodium==1.0.18
+lz4-c==1.9.4
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+marshmallow==3.26.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==3.1.2
+mkl==2023.1.0
+mkl-service==2.4.0
+mkl_fft==1.3.11
+mkl_random==1.2.8
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.6.3
+mypy-extensions==1.1.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbconvert-core==7.16.6
+nbconvert-pandoc==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==7.4.4
+notebook-shim==0.2.4
+numpy==2.0.1
+numpy-base==2.0.1
+oauthlib==3.3.1
+onnxruntime==1.22.1
+openai==1.97.1
+openssl==3.5.1
+opentelemetry-api==1.35.0
+opentelemetry-exporter-otlp-proto-common==1.35.0
+opentelemetry-exporter-otlp-proto-grpc==1.35.0
+opentelemetry-proto==1.35.0
+opentelemetry-sdk==1.35.0
+opentelemetry-semantic-conventions==0.56b0
+orjson==3.11.0
+overrides==7.4.0
+packaging==24.2
+pandoc==2.12
+pandocfilters==1.5.0
+parso==0.8.4
+pip==25.1
+platformdirs==4.3.7
+posthog==5.4.0
+prometheus_client==0.21.1
+prompt-toolkit==3.0.43
+prompt_toolkit==3.0.43
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.26.1
+psutil==5.9.0
+pure_eval==0.2.2
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pybase64==1.4.1
+pycparser==2.21
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-settings==2.10.1
+pygments==2.19.1
+pyparsing==3.2.3
+pypdf==5.8.0
+pypika==0.48.9
+pyproject-hooks==1.2.0
+pyqt==6.7.1
+pyqt6-sip==13.9.1
+pyreadline3==3.5.4
+pysocks==1.7.1
+python==3.11.13
+python-dateutil==2.9.0post0
+python-dotenv==1.1.1
+python-fastjsonschema==2.20.0
+python-json-logger==3.2.1
+python_abi==3.11
+pywin32==308
+pywinpty==2.0.15
+pyyaml==6.0.2
+pyzmq==26.2.0
+qtbase==6.7.3
+qtconsole==5.6.1
+qtdeclarative==6.7.3
+qtpy==2.4.1
+qtsvg==6.7.3
+qttools==6.7.3
+qtwebchannel==6.7.3
+qtwebsockets==6.7.3
+re2==2024.07.02
+referencing==0.30.2
+regex==2024.11.6
+requests==2.32.4
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.1.0
+rpds-py==0.22.3
+rsa==4.9.1
+send2trash==1.8.2
+setuptools==78.1.1
+shellingham==1.5.4
+sip==6.10.0
+six==1.17.0
+sniffio==1.3.0
+soupsieve==2.5
+sqlalchemy==2.0.41
+sqlite==3.50.2
+stack_data==0.2.0
+starlette==0.47.2
+sympy==1.14.0
+tbb==2021.8.0
+tenacity==8.5.0
+terminado==0.17.1
+tiktoken==0.9.0
+tinycss2==1.4.0
+tk==8.6.14
+tokenizers==0.21.2
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.16.0
+typing-extensions==4.14.1
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+tzdata==2025b
+ucrt==10.0.22621.0
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.35.0
+vc==14.3
+vc14_runtime==14.44.35208
+vs2015_runtime==14.44.35208
+watchfiles==1.1.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wheel==0.45.1
+widgetsnbextension==4.0.13
+win_inet_pton==1.1.0
+winpty==0.4.3
+xz==5.6.4
+yaml==0.2.5
+yarl==1.20.1
+zeromq==4.3.5
+zipp==3.23.0
+zlib==1.2.13
+zstandard==0.23.0
+zstd==1.5.6
