--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,8 @@ backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
-brotlicffi==1.0.9.2
 build==1.2.2.post1
+bzip2==1.0.8
 cachetools==5.5.2
 certifi==2025.7.14
 cffi==1.17.1
@@ -35,6 +35,7 @@ defusedxml==0.7.1
 distro==1.9.0
 durationpy==0.10
 executing==0.8.3
+expat==2.7.1
 fastapi==0.116.1
 filelock==3.18.0
 filetype==1.2.0
@@ -70,7 +71,6 @@ ipywidgets==8.1.5
 jedi==0.19.2
 jinja2==3.1.6
 jiter==0.10.0
-jpeg==9e
 json5==0.9.25
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -96,26 +96,27 @@ langchain-google-genai==2.0.10
 langchain-openai==0.3.28
 langchain-text-splitters==0.3.9
 langsmith==0.4.8
+libsodium==1.0.18
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 marshmallow==3.26.1
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.1.2
-mkl-service==2.4.0
-mkl_fft==1.3.11
-mkl_random==1.2.8
 mmh3==5.1.0
 mpmath==1.3.0
 multidict==6.6.3
 mypy-extensions==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
+nbconvert-core==7.16.6
+nbconvert-pandoc==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.4
 notebook-shim==0.2.4
 numpy==2.0.1
+numpy-base==2.0.1
 oauthlib==3.3.1
 onnxruntime==1.22.1
 openai==1.97.1
@@ -128,6 +129,7 @@ opentelemetry-semantic-conventions==0.56b0
 orjson==3.11.0
 overrides==7.4.0
 packaging==24.2
+pandoc==2.12
 pandocfilters==1.5.0
 parso==0.8.4
 pip==25.1
@@ -153,12 +155,12 @@ pyparsing==3.2.3
 pypdf==5.8.0
 pypika==0.48.9
 pyproject-hooks==1.2.0
-pyqt6-sip==13.9.1
 pyreadline3==3.5.4
 pysocks==1.7.1
 python==3.11.13
 python-dateutil==2.9.0post0
 python-dotenv==1.1.1
+python-fastjsonschema==2.20.0
 python-json-logger==3.2.1
 pywin32==308
 pywinpty==2.0.15
@@ -178,7 +180,6 @@ rsa==4.9.1
 send2trash==1.8.2
 setuptools==78.1.1
 shellingham==1.5.4
-sip==6.10.0
 six==1.17.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -198,6 +199,7 @@ typer==0.16.0
 typing-extensions==4.14.1
 typing-inspect==0.9.0
 typing-inspection==0.4.1
+tzdata==2025b
 uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
@@ -210,5 +212,6 @@ wheel==0.45.1
 widgetsnbextension==4.0.13
 win_inet_pton==1.1.0
 yarl==1.20.1
+zeromq==4.3.5
 zipp==3.23.0
 zstandard==0.23.0
