--- a/requirements.txt
+++ b/requirements.txt
@@ -153,7 +153,7 @@ pysocks==1.7.1
 python-dateutil==2.9.0post0
 python-dotenv==1.1.1
 python-json-logger==3.2.1
-pywinpty==2.0.15
+pywinpty==2.0.15; sys_platform == "win32"
 pyyaml==6.0.2
 pyzmq==26.2.0
 qtconsole==5.6.1
