--- a/vercel.json
+++ b/vercel.json
@@ -12,13 +12,28 @@
   "routes": [
     {
       "src": "/hackrx/run",
-      "dest": "/api/hackrx_run.py"
+      "dest": "/api/main.py"
     }
   ],
   "installCommand": "python3 -m pip install --no-cache-dir --upgrade pip setuptools && python3 -m pip install --no-cache-dir -r requirements.txt",
   "functions": {
     "api/**": {
-      "excludeFiles": "{tests,.venv,*.md,docs,.git,*.cache,__pycache__}/**"
+      "excludeFiles": [
+        "**/*.pyc",
+        "**/__pycache__/**",
+        ".env",
+        ".git/**",
+        ".venv/**",
+        "automations/**",
+        "docs/**",
+        "logdir/**",
+        "tests/**",
+        "prisma/migrations/**",
+        "Dockerfile",
+        "README.md",
+        "pytest.ini",
+        "package.json"
+      ]
     }
   }
 }
