chanegd vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "functions": {
     "api/**": {
+      "use": "@vercel/python",
       "runtime": "vercel-python@3.11",
       "excludeFiles": "{tests,.venv,*.md,docs,.git,*.cache,__pycache__}/**"
     }
