--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "functions": {
+    "api/**": {
+      "runtime": "vercel-python@3.11"
+    }
+  },
   "routes": [
     {
       "src": "/hackrx/run",
