added builds instead of functions in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
   "version": 2,
-  "functions": {
-    "api/**": {
+  "builds": [
+    {
+      "src": "api/main.py",
       "use": "@vercel/python"
     }
-  },
+  ],
+  
   "routes": [
     {
       "src": "/hackrx/run",
