--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/main.py",
+      "src": "/api/main.py",
       "use": "@vercel/python"
     }
   ],
-  
   "routes": [
     {
       "src": "/hackrx/run",
